--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
         <!-- <nav id="navbar" class="navbar navbar-expand'-sm"> -->
-          <nav class="navbar navbar-expand-lg navbar-dark  text-right" id="navbar" >
+          <nav class="navbar navbar-expand-lg" id="navbar" >
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
