--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                       </p>
                       <br>
                       <p class="lead">
-                       Ambitious and hardworking individual, with broad skills and experience in digital and printed marketing, social media and leading projects. Furthermore, I am adept at handling multiple tasks on a daily basis competently and at working well under pressure.
+                       Ambitious and hardworking individual.I am adept at handling multiple tasks on a daily basis competently and at working well under pressure.
                       </p>
                     </div>
                   </div>
