--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   <a href="https://github.com/PapunKumarDas/Detection_of_covid19-Using-Desnet-Resnet-vgg16" target="blank"><img align="center" src="https://prod-images-static.radiopaedia.org/images/10136416/502185e27fd4aadd6f1bcc65dd5738d4ed8da4aaec6e901cf5d07fc62768cdf3_gallery.jpeg" alt="github.com/PapunKumarDas" height="100" width="100" /></a>
                 </div>
                 <div class="service-content">
-                  <h2 class="s-title">Covid-19 detection</h2>
+                  <h2 class="s-title"><a href="https://github.com/PapunKumarDas/Detection_of_covid19-Using-Desnet-Resnet-vgg16" target="blank">Covid-19 detection</h2></a>
                   <p class="s-description text-center">
                     A Convolutional Neural Network-Long Short Time Memory model is designed and developed to extract features from raw data hierarchically. In order to make more realistic assumptions and use the Proposed Method in the practical field, white Gaussian noise is added to the raw chest X-ray imagery. 
                   </p>
